removed pysmell, bash.title

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,5 +15,5 @@
 	co = checkout
 	ci = commit
 	br = branch
-    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s [%an] %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
 
